# adventofcode

./: .gitignore  README.md  aoc_2015.ipynb  aoc_2019.ipynb  aoc_2020.ipynb  aoc_2021.ipynb  aoc_2022.ipynb  aoc_2023.ipynb  aoc_2024.ipynb  pyproject.toml
