[project]
name = "adventofcode"
version = "0.1.0"
description = "Contains my solution to advent of code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aocd>=0.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.3",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "z3>=0.2.0",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["FA102", "D203", "D213"]